env : create React App
- Upbit API 사용법을 설명하기 위한 React 예제코드 개발환경 설정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upbit_api_example",
+  "name": "upbit_api_example_React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
