feat : [Upbit API] quotation api - getMarketCode component
- Upbit API에서 quotation api에 해당하는 getMarketCode 컴포넌트 기능
추가
- Refresh 버튼을 추가한 전체 마켓코드 조회 예제

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upbit_api_example_React",
+  "name": "upbit_api_example_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
