feat : github pages 연결
 On branch master
 Changes to be committed:
	modified:   package-lock.json
	modified:   package.json
	modified:   src/Router.js

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "js-queue": "^2.0.2",
     "lightweight-charts": "^3.8.0",
     "lodash": "^4.17.21",
@@ -20,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "http://devKangMinHyeok.github.io/React-Upbit-API-Example/"
 }
