fix : github pages 404 error 해결
- github page 에 react와 같은 SPA 웹은 프론트엔드 라우팅이 되어 하위
주소로 들어갔을때, reload를 하면 404 페이지가 나옴 이를 해결하기 위해
deploy시에 404.html을 index.html에서 복사하여 넣도록 scripts 수정

 On branch master
 Changes to be committed:
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "deploy": "cp build/index.html build/404.html && gh-pages -d build",
     "predeploy": "npm run build"
   },
   "eslintConfig": {
