feat : Google Analytics - React GA4로 적용하기
 On branch master
 Changes to be committed:
	modified:   .gitignore
	modified:   package-lock.json
	modified:   package.json
	modified:   public/index.html
	modified:   src/index.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^1.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.4",
