--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
+    "use-upbit-api": "^1.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
