[#2] refact : use-upbit-api version up fetching

--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "js-queue": "^2.0.2",
     "lightweight-charts": "^3.8.0",
     "lodash": "^4.17.21",
@@ -17,8 +13,14 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
-    "use-upbit-api": "^1.0.9",
+    "use-upbit-api": "^2.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
